tests/baselines/reference/checkJsdocOnEndOfFile.errors.txt
error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
tests/cases/conformance/jsdoc/eof.js(2,20): error TS2304: Cannot find name 'bad'.


!!! error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
==== tests/cases/conformance/jsdoc/eof.js (1 errors) ====
    /**
     * @typedef {Array<bad>} Should have error here
                       ~~~
!!! error TS2304: Cannot find name 'bad'.
     */
    